# ai_frontier

./: .dockerignore  README.md  buildspec.yml  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml
app/: daily_runner.py  example.env  runner.py
app/agent/: base.py  curator_agent.py  curator_digest_agent.py  digest_agent.py  email_agent.py  prompts.py
app/database/: README.md  __init__.py  article_repository.py  base_repository.py  connection.py  digest_repository.py  migrate_user_profile.py  models.py  user_repository.py  youtube_repository.py
app/email/: __init__.py  render.py
app/profiles/: user_profile.py
app/scrapers/: __init__.py  anthropic.py  base.py  cursor.py  deepmind.py  nvdia.py  openai.py  windsurf.py  xai.py  youtube.py
app/services/: base.py  process_curator.py  process_digest.py  process_email.py  ses_email.py
archive/api/: __init__.py  main.py
deployment/: AWS_DEPLOYMENT.md  Dockerfile  GCP_DEPLOYMENT.md  GENERAL_CLOUD_DEPLOYMENT.md  README.md
lambda_handlers/: __init__.py  digest_handler.py  email_handler.py  entrypoint.py  scrape_handler.py
ui/: __init__.py  constants.py  profile_ui.py
